Fixed view on firefox

--- a/styles/master.css
+++ b/styles/master.css
@@ -3,7 +3,7 @@ body{
 	color: #00ff00;
 	font-size:  24px;
 	font-family: 'vt323', arial;
-	scrollbar-color: #00FF00;
+	scrollbar-color: #00ff00;
 	scrollbar-gutter: #000000;
 }
 
